fixed gaps in nav

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -12,10 +12,11 @@ body {
 
 .content {
     font-size: 11pt;
-    line-height: 1.5;
+    line-height: 2.0;
     max-width: 800px;
     margin: auto;
     text-align: justify;
+    padding: 15px;
 }
 
 /* 
@@ -29,6 +30,7 @@ body {
     box-shadow: 0px 2px 2px #bbb;
     background-color: #ECEFF1;
     font-size: 11pt;
+    border-top: 1px solid #ccc;
 }
 
 .nav-item {
@@ -36,10 +38,9 @@ body {
     padding: 10px;
     padding-left: 25px;
     padding-right: 25px;
-    display: inline-block;
     color: #263238;
     border-right: 1px solid #ccc;
-    border-top: 1px solid #ccc;
+    float: left;
 }
 
 .nav-item:hover {
